# process-polytopes

./: .env  .gitignore  .gitmodules  ARCHITECTURE.md  BENCHMARKS.md  README.md  flake.nix
lean/: MinimalPolytopes5D.lean  lake-manifest.json  lakefile.toml
lean/MinimalPolytopes5D/: Profiles.lean  Structures.lean
paper/: draft.tex  minimal_polytopes_5d.tex  minimal_polytopes_5d_table.tex
samples/: check_batch_counts.py  check_sorted.py  compare_checkpoints.py  count_by_vertex.py  download_cws.py  verify_merge.py
scripts/: benchmark.sh  benchmark_dim5_cws.sh  download_missing.py  merge_all.sh  run_batched.sh  run_distributed.sh  run_ec2.sh  run_ryzen.sh  run_xeon.sh  setup_ec2.sh  setup_gcp.sh  validate.sh
src/classify/: CMakeLists.txt  add_nf.cpp  build.sh  classifier.cpp  palp_api.h  palp_globals.c
src/sort/: CMakeLists.txt  build_and_run.sh  sort_parquet.cpp
src/verify/: VERIFICATION_SUMMARY.md  classifier_types.h  eva_palp_driver.c  harness_accounting.cpp  harness_dim5_embed_weight.c  harness_dim5_prefix_canonical.c  harness_dim5_select_weights.c  harness_dim5_selection_order.c  harness_dim5_shard_partition.c  harness_hash_nf.cpp  harness_hasher.cpp  harness_key_less.cpp  harness_kway_merge.cpp  harness_layout.cpp  harness_merge_dedup.cpp  harness_palp_wrapper.c  harness_sort_vl.cpp  harness_sorted_reader.cpp  run_eva_palp.sh  run_verification.sh
src/verify/proofs/: bucket_nonoverlap.md  eva_palp_report.md  nf_determinism.md
